--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tic Tac Toe</title>
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
-  <title>Tic Tac Toe Game</title>
 </head>
 
 <body>
@@ -24,6 +23,8 @@
     <div class="square" data-index="7"></div>
     <div class="square" data-index="8"></div>
   </div>
+
+  <div id="console" style="height:100px;width:50px;overflow:scroll;"></div>
 
   <button id="reset-button">Reset</button>
 </body>
